tests/interpreter_directive/interpreter_directive.exp
Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `1` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:4:2
   4| (1: string); // error
       ^ [1]

References:
   test.js:4:5
   4| (1: string); // error
          ^^^^^^ [2]



Found 1 error
